manifests/apps/portfolio/service.yml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: apps
spec:
  selector:
    app: portfolio
  ports:
    - port: 80
      targetPort: 4321
