manifests/apps/portfolio/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio
  namespace: apps
spec:
  ingressClassName: traefik
  rules:
    - host: portfolio.pratik-labs.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio
                port:
                  number: 80
